all modules button alignment and field alignment fixed for mobile view

--- a/src/app/modules/absence/components/add-absence/add-absence.component.scss
+++ b/src/app/modules/absence/components/add-absence/add-absence.component.scss
@@ -126,7 +126,7 @@
     z-index: 1;
 
     dfm-button {
-      flex: 1;
+      // flex: 1;
     }
   }
  .max-w-192{
