--- a/src/app/modules/absence/components/view-absence/view-absence.component.scss
+++ b/src/app/modules/absence/components/view-absence/view-absence.component.scss
@@ -44,7 +44,6 @@ section.ab-vw-section2 {
 
     &>dfm-button {
       height: 44px;
-      flex: 1;
     }
   }
 }
