--- a/src/app/modules/physician/components/physician-add/physician-add.component.scss
+++ b/src/app/modules/physician/components/physician-add/physician-add.component.scss
@@ -65,7 +65,9 @@
     background: white;
 
     dfm-button {
-      flex: 1;
     }
+  }
+  .input-field-mv{
+    width: 100%;
   }
 }
