--- a/src/app/modules/priority-slots/components/add-priority-slots/add-priority-slots.component.scss
+++ b/src/app/modules/priority-slots/components/add-priority-slots/add-priority-slots.component.scss
@@ -123,7 +123,6 @@
       z-index: 1;
 
       dfm-button {
-        flex: 1;
       }
     }
     .modal-body{
