--- a/src/app/modules/site-management/pages/site-management.component.scss
+++ b/src/app/modules/site-management/pages/site-management.component.scss
@@ -41,6 +41,7 @@ label{
 
     .st-mg-title-buttons-mv {
       display: flex!important;
+      margin: 4px 0px 0px 0px;
     }
 
     .st-mg-title-buttons {
